{
  "version": 4,
  "terraform_version": "0.12.0",
  "serial": 9,
  "lineage": "b3395d64-66b4-901a-e13a-ec288a72efea",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nic_ubuntu",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/241ed6c6-dfd4-42f2-b8da-6f08576b5ce0/resourceGroups/NSGs/providers/Microsoft.Network/networkSecurityGroups/NIC_Ubuntu",
            "location": "westeurope",
            "name": "NIC_Ubuntu",
            "resource_group_name": "NSGs",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "env": "training",
              "source": "citadel"
            }
          },
          "depends_on": [
            "azurerm_resource_group.nsgs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "resource_group_default",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/241ed6c6-dfd4-42f2-b8da-6f08576b5ce0/resourceGroups/NSGs/providers/Microsoft.Network/networkSecurityGroups/ResourceGroupDefault",
            "location": "westeurope",
            "name": "ResourceGroupDefault",
            "resource_group_name": "NSGs",
            "security_rule": [],
            "tags": {
              "env": "training",
              "source": "citadel"
            }
          },
          "depends_on": [
            "azurerm_resource_group.nsgs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "AllowHTTP",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/241ed6c6-dfd4-42f2-b8da-6f08576b5ce0/resourceGroups/NSGs/providers/Microsoft.Network/networkSecurityGroups/ResourceGroupDefault/securityRules/AllowHTTP",
            "name": "AllowHTTP",
            "network_security_group_name": "ResourceGroupDefault",
            "priority": 1020,
            "protocol": "Tcp",
            "resource_group_name": "NSGs",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null
          },
          "depends_on": [
            "azurerm_network_security_group.resource_group_default",
            "azurerm_resource_group.nsgs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "AllowHTTPS",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "443",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/241ed6c6-dfd4-42f2-b8da-6f08576b5ce0/resourceGroups/NSGs/providers/Microsoft.Network/networkSecurityGroups/ResourceGroupDefault/securityRules/AllowHTTPS",
            "name": "AllowHTTPS",
            "network_security_group_name": "ResourceGroupDefault",
            "priority": 1021,
            "protocol": "Tcp",
            "resource_group_name": "NSGs",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null
          },
          "depends_on": [
            "azurerm_network_security_group.resource_group_default",
            "azurerm_resource_group.nsgs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "AllowSQLServer",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "1443",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/241ed6c6-dfd4-42f2-b8da-6f08576b5ce0/resourceGroups/NSGs/providers/Microsoft.Network/networkSecurityGroups/ResourceGroupDefault/securityRules/AllowSQLServer",
            "name": "AllowSQLServer",
            "network_security_group_name": "ResourceGroupDefault",
            "priority": 1030,
            "protocol": "Tcp",
            "resource_group_name": "NSGs",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null
          },
          "depends_on": [
            "azurerm_network_security_group.resource_group_default",
            "azurerm_resource_group.nsgs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "AllowSSH",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/241ed6c6-dfd4-42f2-b8da-6f08576b5ce0/resourceGroups/NSGs/providers/Microsoft.Network/networkSecurityGroups/ResourceGroupDefault/securityRules/AllowSSH",
            "name": "AllowSSH",
            "network_security_group_name": "ResourceGroupDefault",
            "priority": 1010,
            "protocol": "Tcp",
            "resource_group_name": "NSGs",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null
          },
          "depends_on": [
            "azurerm_network_security_group.resource_group_default",
            "azurerm_resource_group.nsgs"
          ]
        }
      ]
    }
  ]
}